Created a new function called getCOM() for both leg and body models. Returns an (x,y,z) tuple in leg and body coordinate frames respectively. It pulls data from the conf files, which are based on todays solidworks model.

--- a/Stompy/body_model.conf
+++ b/Stompy/body_model.conf
@@ -1,5 +1,6 @@
 
 [~~~ STOMPY BODY MODEL ~~~]
+Units are in: SI only
 
 [BodyModel]
 based_on: http://wiki.artisansasylum.com/index.php/File:Hexapod-Stompy_coordinate_frames.png
@@ -9,3 +10,8 @@ leg0_theta:     0.78539
 leg1_offset_x:  0.0
 leg1_offset_y:  0.762
 chassis_bottom_z:   -0.6096
+
+chassis_mass: 1000.0
+chassis_com_x: 0.0
+chassis_com_y: 0.0
+chassis_com_z: 0.0
