--- a/Stompy/leg_model.conf
+++ b/Stompy/leg_model.conf
@@ -1,10 +1,30 @@
 
 [~~~ STOMPY LEG MODEL ~~~]
+Units are in: SI only
 
 [LegModel]
 yaw_len: 0.2032
 thigh_len: 1.5494
 calf_len: 2.1336
+
+These measurements are taken with respect to each components origin: That means a point anywhere between one joint and the next is directly on the x-axis.
+
+yaw_com_x: 0.1 
+yaw_com_y: 0.0
+yaw_com_z: 0.0
+
+thigh_com_x: 0.75
+thigh_com_y: 0.0
+thigh_com_z: 0.0
+
+calf_com_x: 1.0
+calf_com_y: 0.0
+calf_com_z: 0.0
+
+yaw_mass: 30.0
+thigh_mass: 60.0
+calf_mass: 35.0
+foot_mass: 10.0
 
 shock_depth_threshold_low: 0.01
 shock_depth_threshold_high: 0.02
